--- a/privacy.html
+++ b/privacy.html
@@ -65,10 +65,10 @@
 <p>You can revoke Mailcue's access to your Gmail at any time by visiting <a href="https://myaccount.google.com/permissions" target="_blank">Google Account Permissions</a> and removing Mailcue. This immediately stops all scheduled sends and deletes your stored credentials.</p>
 
 <h2>Contact</h2>
-<p>If you have questions about this privacy policy or your data, contact us at: <a href="mailto:support@mailcue.com">support@mailcue.com</a></p>
+<p>If you have questions about this privacy policy or your data, contact us at: <a href="mailto:l.foreman201@gmail.com">l.foreman201@gmail.com</a></p>
 
 <div class="footer">
-  <p>Mailcue is operated by [Your Name / Business Name]. Registered in England and Wales.</p>
+  <p>Mailcue is operated by [Lucas / Mailcue]. Registered in England and Wales.</p>
 </div>
 
 </div>
