Update contact email in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -66,7 +66,7 @@
 <p>You can revoke Mailcue's access to your Gmail at any time by visiting <a href="https://myaccount.google.com/permissions" target="_blank">Google Account Permissions</a> and removing Mailcue. This immediately stops all scheduled sends and deletes your stored credentials.</p>
 
 <h2>Contact</h2>
-<p>If you have questions about this privacy policy or your data, contact us at: <a href="mailto:l.foreman201@gmail.com">l.foreman201@gmail.com</a></p>
+<p>If you have questions about this privacy policy or your data, contact us at: <a href="mailto:fourmama449@gmail.com">fourmama449@gmail.com</a></p>
 
 <div class="footer">
   <p>Mailcue is operated by [Lucas / Mailcue]. Registered in England and Wales.</p>
